# OxigenLang

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  install.sh  lazy.toml  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.lazy/: history.json
benchmark_reports/: README.md  latest-native.md
core/: Cargo.toml
core/src/: concurrent.rs  keyinput.rs  lib.rs  test_runner.rs
core/src/ast/: mod.rs
core/src/compiler/: mod.rs  opcode.rs  slot_types.rs
core/src/evaluator/: builtins.rs  mod.rs  tests.rs
core/src/formatter/: mod.rs
core/src/jit/: engine.rs  mod.rs  runtime.rs  scan.rs  virt_stack.rs
core/src/jit/engine/: cache.rs  counters.rs  defs.rs  helpers.rs  mod.rs
core/src/lexer/: mod.rs  tests.rs
core/src/netres/: mod.rs
core/src/object/: environment.rs  mod.rs
core/src/parser/: mod.rs  tests.rs
core/src/token/: mod.rs
core/src/vm/: builtins.rs  collections.rs  intern.rs  mod.rs  nanvalue.rs  value.rs
core/tests/: bytecode_dump.rs  collections.rs  concurrent_autojoin.rs  concurrent_closure.rs  concurrent_pmap.rs  fix_builtins_parity.rs  fix_close_upvalues_oob.rs  fix_compiler_v1typed_skipstop.rs  fix_equality_coercion.rs  fix_errorvalue_decl.rs  fix_implicit_self_field_write.rs  fix_jit_local_value_miscompiles.rs  fix_jit_recursion_guard.rs  fix_lexer_unterminated.rs  fix_nested_named_fn.rs  fix_parser_struct_inherit_hidden.rs  fix_residual_skipstop_nested.rs  fix_residual_skipstop_value.rs  fix_residual_treewalk.rs  fix_self_field_assign_in_each.rs  fix_skip_closes_nested_captured_upvalue.rs  fix_spawn_captures_global.rs  fix_spawn_local_module_no_deadlock.rs  fix_str_annotation_none.rs  fix_struct_named_ctor_args.rs  fix_treewalk_parity.rs  fix_tuple_slice.rs  fix_v1typed_each_shadow.rs  fix_v5_and_error_hints.rs  fix_v8_mutual_recursion.rs  fix_vm_test_runner.rs  formatter_roundtrip.rs  formatter_test.rs  jit_fallback.rs
crates/oxigen-cli/: Cargo.toml
crates/oxigen-cli/src/: main.rs
crates/oxigen-cli/src/repl/: mod.rs
crates/oxigen-cli/tests/: cli_execution.rs
crates/oxigen-core/: Cargo.toml
crates/oxigen-core/src/evaluator/: mod.rs
crates/oxigen-core/src/formatter/: mod.rs
crates/oxigen-core/src/lexer/: mod.rs
crates/oxigen-core/tests/: formatter_roundtrip.rs  formatter_test.rs
crates/oxigen-lsp/: Cargo.toml
crates/oxigen-lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs
docs/: JIT_ARCHITECTURE.md  JIT_CLOSURE_SPECIALIZATION.md  KNOWN_JIT_BUGS.md  PERF_PLAN_LUAJIT.md  angle_forms.md  builtins.md  concurrency-plan.md  concurrency.md  control_flow.md  conventions.md  data_types.md  enums.md  functions.md  getting_started.md  imports.md  operators.md  optimization-roadmap.md  pattern_matching.md  stdlib.md  structs.md  syntax.md  testing.md  type_system.md  variables.md
editors/neovim/: README.md
editors/neovim/ftdetect/: oxigen.lua
editors/neovim/lsp/: oxigen_lsp.lua
editors/neovim/syntax/: oxigen.lua
example/: Array.oxi  bench_arith.oxi  bench_arith.py  bench_arith.ts  bench_closure.oxi  bench_closure.py  bench_closure.ts  bench_collatz.oxi  bench_collatz.py  bench_collatz.ts  bench_fib.oxi  bench_fib.py  bench_fib.ts  bench_loop.oxi  bench_loop.py  bench_loop.ts  bench_nested_loop.oxi  bench_nested_loop.py  bench_nested_loop.ts  bench_nested_loop_big.oxi  bench_nested_loop_big.py  bench_nested_loop_big.ts  bench_primes_parallel.oxi  bench_primes_parallel.py  bench_primes_serial.oxi  bench_primes_serial.py  bench_struct_method.oxi  bench_struct_method.py  bench_struct_method.ts  calculator_test.oxi  enum_choose.oxi  enum_payload.oxi  enum_stoplight.oxi  generic_example.oxi  hello_world.oxi  hello_world_indent.oxi  import_test.oxi  json_map_test.oxi  linked_list.oxi  llm_stream.oxi  (+15 more)
lsp/: Cargo.toml
lsp-go/: completion.go  completion_test.go  diagnostics.go  docindex.go  docindex_test.go  formatting.go  go.mod  hover.go  main.go  oxigen-lsp  server.go  stdlib.go  stdlib_test.go  symbols.go  transport.go  types.go
lsp/src/: completion.rs  server.rs  symbols.rs
perf-poc/: Cargo.toml
perf-poc/src/: main.rs
scripts/: bench.py  bench.sh  cp_to_neovim.oxi  install.sh  uninstall.sh
src/: main.rs
src/ast/: mod.rs
src/evaluator/: builtins.rs  mod.rs
src/lexer/: mod.rs
src/object/: environment.rs  mod.rs
src/parser/: mod.rs
src/repl/: mod.rs
src/token/: mod.rs
stdlib/: ansi.oxi  array.oxi  datetime.oxi  encoding.oxi  env.oxi  hash.oxi  io.oxi  json.oxi  math.oxi  net.oxi  os.oxi  parse_args.oxi  path.oxi  random.oxi  regex.oxi  result.oxi  strings.oxi  test.oxi  time.oxi  toml.oxi
tests/: array_test.oxi  concurrency.oxi  datetime_test.oxi  encoding_test.oxi  hash_test.oxi  math_test.oxi  path_test.oxi  regex_test.oxi  result_test.oxi  strings_test.oxi
update/: update_oxigen.oxi
(+7 files in other folders)
