[workspace]
resolver = "3"
members = [
    "core",
    "crates/oxigen-cli",
    "lsp",
]

[profile.test]
# oxigen-core's test target pulls in a very large in-crate unit test surface.
# Turning off debuginfo for test builds keeps `cargo test` from ballooning
# memory during codegen/link while leaving normal dev builds unchanged.
debug = 0
