[package]
name = "oxigen-core"
version = "0.1.2"
edition = "2024"

[features]
default = []
# Enables the baseline JIT compiler (Cranelift-backed). Off by default —
# keeps cranelift's heavy dep tree out of plain builds.
jit = [
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-native",
]

[dependencies]
toml = "1.1.2"
ureq = "3"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
urlencoding = "2"

cranelift-jit       = { version = "0.131", optional = true }
cranelift-module    = { version = "0.131", optional = true }
cranelift-codegen   = { version = "0.131", optional = true }
cranelift-frontend  = { version = "0.131", optional = true }
cranelift-native    = { version = "0.131", optional = true }
