[package]
name = "oxigen"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "oxigen"
path = "src/main.rs"

[features]
default = []
# Enables the baseline JIT in oxigen-core and surfaces the `--jit` flag.
jit = ["oxigen-core/jit"]

[dependencies]
oxigen-core = { path = "../../core" }
rustyline = "15"
serde_json = "1"
