[package]
name = "oxigen"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "oxigen"
path = "src/main.rs"

[features]
# JIT on by default (see oxigen-core). `--no-default-features` builds a
# VM-interpreter-only binary; `--jit`/`OXIGEN_JIT` then have no effect.
default = ["jit"]
# Enables the baseline JIT in oxigen-core and surfaces the `--jit` flag.
jit = ["oxigen-core/jit"]

[dependencies]
oxigen-core = { path = "../../core" }
rustyline = "18"
serde_json = "1.0.150"
